# rust_bpf

./: .gitignore
c/: CMakeLists.txt
c/src/bprm_committed_creds/: probe.bpf.c
c/src/cgroup/: probe.bpf.c
c/src/common/: all.h  arch.h  blob.c  blob.h  bprm.h  int_types.h  kconfig.h  macros.h  maps.h  namespace.h  signal.h  signals.h  str.h  task.h  types.h  vmlinux.h
c/src/dummy/: probe.bpf.c
c/src/file_open/: fs_walk.h  probe.bpf.c
c/src/sched_process_exec/: probe.bpf.c
c/src/tracee/: probe.bpf.c  probe.bpf.c.orig
rust/lib/: Cargo.toml  build.rs
rust/lib/src/: lib.rs
rust/lib/src/bpf/: blob.rs  bpf_loader.rs  bpf_rb.rs  bprm_committed_creds.rs  dummy.rs  file_open_util.rs  mod.rs  types.rs  types_conv.rs  types_plain.rs  utils.rs
rust/lib/src/docs/: channels.drawio
rust/lib/src/tests/: blob_test.rs  bprm_committed_creds_test.rs  cgroup_test.rs  file_open_test.rs  mod.rs  sched_process_exec_test.rs
rust/lib/src/tests/bpf/: blob_test.rs  mod.rs
rust/lib/src/tests/resources/: mod.rs  script  unshare
