[package]
edition = "2021"
name = "bpf-lib"
version = "0.1.0"

[build-dependencies]
bindgen = "0.69"
libbpf-cargo = "0.24"

[dev-dependencies]
tempfile = "3"
async-std = "1.13"

[dependencies]
anyhow = "1.0"
async-channel = "2.3"
bindgen = "0.70"
libbpf-rs = "0.24"
libbpf-sys = "1.5"
num_cpus = "1"
plain = "0.2"
tokio = { version = "1.4", features = ["rt-multi-thread", "macros", "time", "sync"] }
rand = "0.9.0-beta.1"
